@@ -148,10 +148,29 @@ gremlin> :bytecode from g.V().out('knows')  <1>
 ==>{"@type":"g:Bytecode","@value":{"step":[["V"],["out","knows"]]}}
 gremlin> :bytecode translate g {"@type":"g:Bytecode","@value":{"step":[["V"],["out","knows"]]}} <2>
 ==>g.V().out("knows")
+gremlin> m = GraphSONMapper.build().create()
+==>org.apache.tinkerpop.gremlin.structure.io.graphson.GraphSONMapper@69d6a7cd
+gremlin> :bc config m  <3>
+==>Configured bytecode serializer
+gremlin> :bc from g.V().property('d',java.time.YearMonth.now()) <4>
+Could not find a type identifier for the class : class java.time.Month. Make sure the value to serialize has a type identifier registered for its class. (through reference chain: java.time.YearMonth["month"])
+Type ':help' or ':h' for help.
+Display stack trace? [yN]n
+gremlin> :bc reset  <5>
+==>Bytecode serializer reset to GraphSON 3.0 with extensions and TinkerGraph serializers
+gremlin> :bc from g.V().property('d',java.time.YearMonth.now())
+==>{"@type":"g:Bytecode","@value":{"step":[["V"],["property","d",{"@type":"gx:YearMonth","@value":"2020-11"}]]}}
 ----
 
 <1> Generates a GraphSON 3.0 representation of the traversal as bytecode.
 <2> Converts bytecode in GraphSON 3.0 format to a traversal string.
+<3> Configure a custom `GraphSONMapper` for the `:bytecode` command to use which can be helpful when working with
+custom classes from different graph providers. The `config` option can take a `GraphSONMapper` argument as shown or
+one or more `IoRegistry` or `SimpleModule` implementations that will plug into the default `GraphSONMapper` constructed
+by the `:bytecode` command. The default will configure for GraphSON 3.0 with the extensions module and, if present,
+the `TinkerIoRegistry` from TinkerGraph.
+<4> Note that the `YearMonth` will not serialize because `m` did not configure the extensions module.
+<5> After `reset` it works properly once more.
 
 NOTE: The Console does expose the `:record` command which is inherited from the Groovy Shell. This command works well
 with local commands, but may record session outputs differently for `:remote` commands. If there is a need to use
