@@ -22,9 +22,13 @@ import org.apache.tinkerpop.gremlin.console.Mediator
 import org.apache.tinkerpop.gremlin.process.traversal.Bytecode
 import org.apache.tinkerpop.gremlin.process.traversal.Traversal
 import org.apache.tinkerpop.gremlin.process.traversal.translator.GroovyTranslator
+import org.apache.tinkerpop.gremlin.structure.io.IoRegistry
+import org.apache.tinkerpop.gremlin.structure.io.Mapper
 import org.apache.tinkerpop.gremlin.structure.io.graphson.GraphSONMapper
 import org.apache.tinkerpop.gremlin.structure.io.graphson.GraphSONVersion
+import org.apache.tinkerpop.gremlin.structure.io.graphson.GraphSONXModuleV3d0
 import org.apache.tinkerpop.shaded.jackson.databind.ObjectMapper
+import org.apache.tinkerpop.shaded.jackson.databind.module.SimpleModule
 import org.codehaus.groovy.tools.shell.ComplexCommandSupport
 import org.codehaus.groovy.tools.shell.Groovysh
 
@@ -37,16 +41,27 @@ class BytecodeCommand extends ComplexCommandSupport {
 
     private final Mediator mediator
 
-    private final ObjectMapper mapper = GraphSONMapper.build().version(GraphSONVersion.V3_0).create().createMapper()
+    private ObjectMapper mapper
 
     public BytecodeCommand(final Groovysh shell, final Mediator mediator) {
-        super(shell, ":bytecode", ":bc", ["from", "translate"])
+        super(shell, ":bytecode", ":bc", ["config", "from", "reset", "translate"])
         this.mediator = mediator
+        do_reset()
+    }
+
+    def Object do_config = { List<String> arguments ->
+        def resolvedArgs = arguments.collect{shell.interp.context.getVariable(it)}
+        try {
+            this.initMapper(resolvedArgs)
+            return "Configured bytecode serializer"
+        } catch (IllegalArgumentException iae) {
+            return iae.message
+        }
     }
     
     def Object do_from = { List<String> arguments ->
         mediator.showShellEvaluationOutput(false)
-        def args = arguments.join("")
+        def args = arguments.join(" ")
         def traversal = args.startsWith("@") ? shell.interp.context.getVariable(args.substring(1)) : shell.execute(args)
         if (!(traversal instanceof Traversal))
             return "Argument does not resolve to a Traversal instance, was: " + traversal.class.simpleName
@@ -57,8 +72,56 @@ class BytecodeCommand extends ComplexCommandSupport {
 
     def Object do_translate = { List<String> arguments ->
         def g = arguments[0]
-        def args = arguments.drop(1).join("")
+        def args = arguments.drop(1).join(" ")
         def graphson = args.startsWith("@") ? shell.interp.context.getVariable(args.substring(1)) : args
         return GroovyTranslator.of(g).translate(mapper.readValue(graphson, Bytecode.class))
+    }
+
+    def Object do_reset = { List<String> arguments ->
+        def (GraphSONMapper.Builder builder, boolean loadedTinkerGraph) = createDefaultBuilder()
+
+        try {
+            this.initMapper([builder.create()])
+            return "Bytecode serializer reset to GraphSON 3.0 with extensions" +
+                    (loadedTinkerGraph ? " and TinkerGraph serializers" : "")
+        } catch (IllegalArgumentException iae) {
+            return iae.message
+        }
+    }
+
+    private def static createDefaultBuilder() {
+        def builder = GraphSONMapper.build().
+                addCustomModule(GraphSONXModuleV3d0.build().create(false)).
+                version(GraphSONVersion.V3_0)
+
+        def loadedTinkerGraph = false
+        try {
+            def tinkergraphIoRegistry = Class.forName("org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerIoRegistryV3d0")
+            builder.addRegistry(tinkergraphIoRegistry."instance"())
+            loadedTinkerGraph = true
+        } catch (Exception ignored) {
+            // ok to skip if the registry isn't present
+        }
+        [builder, loadedTinkerGraph]
+    }
+
+    private initMapper(def args) {
+        if (args.size() == 1 && args[0] instanceof GraphSONMapper) {
+            this.mapper = ((GraphSONMapper) args[0]).createMapper()
+        } else {
+            GraphSONMapper.Builder builder = (GraphSONMapper.Builder) createDefaultBuilder()[0]
+            args.each {
+                if (it instanceof GraphSONMapper)
+                    throw new IllegalArgumentException("If specifying a GraphSONMapper it must be the only argument")
+                else if (it instanceof IoRegistry)
+                    builder.addRegistry(it)
+                else if (it instanceof SimpleModule)
+                    builder.addCustomModule(it)
+                else
+                    throw new IllegalArgumentException("Configuration argument of ${it.class.simpleName} is ignored - must be IoRegistry, SimpleModule or a single GraphSONMapper")
+            }
+
+            this.mapper = builder.create().createMapper()
+        }
     }
 }
