@@ -16,5 +16,5 @@
 # under the License.
 
 command.description=Gremlin bytecode helper commands
-command.usage=[from <Traversal>|translate <g> <bytecode>]
+command.usage=[config <[GraphSONMapper|IoRegistry|SimpleModule]>|from <Traversal>|reset|translate <g> <bytecode>]
 command.help=Gremlin bytecode helper commands
